fix: tooltip container `z-index` issue (#2677)

--- a/src/base-tailwind.scss
+++ b/src/base-tailwind.scss
@@ -60,10 +60,11 @@
             background-color: var(--dokan-button-background-color, #7047EB) !important;
         }
     }
+    div[data-radix-popper-content-wrapper],
     div[data-headlessui-state="open"][role="dialog"] {
         // we are using z-index: 999 to make sure the modal is on top of everything except dokan ui toast
         // When changing this value, make sure to check if toast is still on top of the modal
-        z-index: 999;
+        z-index: 999 !important;
     }
 }
 
